# minihost

./: .gitignore  CMakeLists.txt  README.md  build.bat  minihost_config.json
Source/: HostApp.cpp  HostApp.h  Main.cpp
